# Real-Time-Credit-Card-Fraud-Detection

./: .gitignore  Makefile  README.md  pyproject.toml
dags/: kafka_transactions_producer.py  spark_etl.py  spark_ml_training.py  spark_streaming_transactions_processing_job.py
spark_jobs/etl/: config.py  ingest.py  main.py  session.py
spark_jobs/ml_training/: main.py  train.py
spark_jobs/schemas/: __init__.py  customers.py  metrics.py  transactions.py
spark_jobs/transactions_processor/: main.py  process.py
spark_jobs/utils/: __init__.py  config.py  session.py
transactions_producer/: main.py  producer.py  transactions.csv
